--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -17,7 +17,7 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - name: Pass tests
+      - name: Pass JoJo
         run: |
           echo "Jojo pr TEST"
 
